--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 @charset "utf8";
 
-
+/*tela principal  */
 
  .carousel-control-prev-icon,
   .carousel-control-next-icon {
@@ -22,3 +22,8 @@
   .carousel-control-next-icon {
     -webkit-mask-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 16 16'%3E%3Cpath fill='black' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
   }
+/* login tela */
+
+ .card-body{
+  background-color: rgba(0, 0, 0, 0)
+ }
