--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,19 @@ header nav {
   background-color: #1b022c;
 }
 body {
-  background-color: rgb(255, 255, 255);
-}
+  background: linear-gradient(to bottom, #6a0dad, #000000);
+      min-height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      color: white; 
 
-.form-control {
+}
+form-control {
   background-color: transparent !important;
   border: none !important;
   box-shadow: none !important;
 }
-/* login tela */
+
 
 .card-body {
   background-color: rgba(255, 252, 252, 0);
@@ -108,4 +112,7 @@ body {
 .carousel-item img {
   width: 100vw; /* ocupa a tela toda */
   object-fit: cover; /* cobre sem distorcer */
+}
+footer{
+  background-color: #000000;
 }
