--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ header nav {
 }
 
 body {
-      background: linear-gradient(to bottom, #50005ece, #000000);
+      background: linear-gradient(to bottom, #040005ce, #e20808);
       min-height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
