--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,8 @@ footer{
 .card {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+.cart-img { 
+    width: 64px; 
+    height: 64px; 
+    object-fit: contain; 
+}
