--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,37 @@ footer{
     height: 64px; 
     object-fit: contain; 
 }
+.top-carousel {
+  width: 100%;
+  height: 40px;
+  background: #000;
+  color: #fff;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 9999; /* fica acima do header */
+}
+
+.top-track {
+  display: flex;
+  animation: slideTop 12s infinite linear;
+}
+
+.top-item {
+  min-width: 100vw;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 10px 0;
+}
+
+/* ANIMAÇÃO */
+@keyframes slideTop {
+  0%   { transform: translateX(0); }
+  33%  { transform: translateX(-100vw); }
+  66%  { transform: translateX(-200vw); }
+  100% { transform: translateX(0); }
+}
+
+
