--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@
 }
 
 header nav {
-  background-color: rgb(0, 0, 0); /* Roxo translúcido */
+  background-color: rgb(255, 255, 255); /* Roxo translúcido */
   backdrop-filter: blur(10px); /* Deixa o fundo borrado por trás */
   padding: 10px 20px;
 }
@@ -78,7 +78,7 @@ body {
       min-height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
-      color: white; 
+      color: rgb(0, 0, 0); 
 
 }
 form-control {
