--- a/css/card-produto-destaque.css
+++ b/css/card-produto-destaque.css
@@ -14,3 +14,10 @@
   height: 200px;
   object-fit: contain;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+h5 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+}
