--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body {
       margin: 0;
       font-family: Arial, sans-serif;
       color: rgb(0, 0, 0); 
-
+}
 form-control {
   background-color: transparent !important;
   border: none !important;
