--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ footer{
 /* ============================= */
 /* CARROSSEL FINO DO TOPO */
 /* ============================= */
-
+{
 
   position: relative;
   width: 100%;
