--- a/css/card-produto.css
+++ b/css/card-produto.css
@@ -15,8 +15,23 @@
 
 
 /* Imagem do carrinho */
-.card-img-container img { 
-  width: 64px; 
-  height: 64px; 
-  object-fit: contain; 
+.card-img-container {
+  width: 100%;
+  height: 230px;
+  background: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: .25s ease;
+}
+
+.card:hover .card-img-top {
+  transform: scale(1.05);
 }
