--- a/css/catalogo-produtos.css
+++ b/css/catalogo-produtos.css
@@ -4,8 +4,8 @@ body {
 
 /* ===== BANNER ===== */
 .banner-categoria {
-    width: 100%;
-    height: 280px;
+  width: 100%;
+    height: 100%;
     background-color: #111;
     background-size: cover;
     background-position: center;
@@ -37,6 +37,7 @@ body {
     transition: transform .3s ease, box-shadow .3s ease;
     overflow: hidden;
     background-color: #fff;
+     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .product-card:hover {
