--- a/css/catalogo-produtos.css
+++ b/css/catalogo-produtos.css
@@ -4,25 +4,22 @@ body {
 
 /* ===== BANNER ===== */
 .banner-categoria {
-  width: 100%;
-    height: 100%;
-    background-color: #111;
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    margin-bottom: 40px;
+
+
+ height: 280px;
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    background-color: #fff;
+}
+.banner-categoria img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.banner-categoria h1 {
-    color: #fff;
-    font-weight: 700;
-    background: rgba(0,0,0,0.55);
-    padding: 12px 24px;
-    border-radius: 12px;
-}
+
 
 /* ===== TÍTULO ===== */
 .catalog-title {
