--- a/css/cabeçalho.css
+++ b/css/cabeçalho.css
@@ -3,6 +3,7 @@
 nav {
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400; /* funciona, mas a fonte já é naturalmente bold */
+  height: 100px;
 }
 
 nav a {
@@ -12,4 +13,8 @@ nav a {
   text-transform: uppercase;     /* deixa mais profissional */
   padding: 8px 14px;             /* conforto visual */
   display: inline-block;
+}
+nav {
+  
+  
 }
