--- a/css/catalogo-produtos.css
+++ b/css/catalogo-produtos.css
@@ -53,7 +53,13 @@ body {
 .product-img {
     max-width: 100%;
     max-height: 100%;
+    transition: transform 0.4s ease;
 }
+
+.product-card:hover .product-img {
+    transform: scale(1.05);
+}
+
     
 /* ===== DESCONTO ===== */
 .badge-discount {
